# regression-model

./: README.md  pyproject.toml
core/: train.py
